--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@ai-sdk/google": "^2.0.44",
     "@ai-sdk/openai": "^2.0.79",
     "@radix-ui/react-slot": "^1.2.4",
+    "@types/pg": "^8.15.6",
     "ai": "^3.4.33",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "14.0.4",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^3.4.0",
