--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@ai-sdk/google": "^2.0.44",
     "@ai-sdk/openai": "^2.0.79",
     "@radix-ui/react-slot": "^1.2.4",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
     "@types/pg": "^8.15.6",
     "ai": "^3.4.33",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "next": "14.0.4",
     "pg": "^8.16.3",
     "react": "^18.2.0",
