--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node scripts/copy-idl.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
