--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "poker-x402",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "prebuild": "node scripts/copy-idl.js",
